# web3-event-indexer

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: Makefile  db.py  indexer.py  main.py  models.py
